# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml  qwen.config.json
backend/src/lms_backend/routers/: items.py
lab/screenshots/: task-3a-errors-raw.json  task-3a-logs-raw.json  task-3b-traces-raw.json
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  server.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml  run-mcp-clean.sh  run-mcp-http.sh  run-mcp.sh  test-mcp.sh
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
