[project]
name = "mcp-obs"
version = "1.0.0"
description = "MCP server for observability tools (VictoriaLogs and VictoriaTraces)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]

[project.scripts]
mcp-obs = "mcp_obs.server:main"
